@@ -1,0 +1,6 @@
+	.abicalls
+	.globl	foo
+	.ent	foo
+foo:
+	.cpsetup $4,$5,foo
+	.end	foo
