@@ -1,0 +1,4 @@
+	.abicalls
+	.gpdword	foo
+	.gpdword	bar
+bar:
